Fix alignment

--- a/scss/components/core/_Banner.scss
+++ b/scss/components/core/_Banner.scss
@@ -8,6 +8,7 @@
   font-weight: 450;
   font-size: 16px;
   line-height: 20px;
+  text-align: center;
   background: var(--orange-50);
 
   @media (max-width: 660px) {
